{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 71,
  "lineage": "c6457260-01f9-b9aa-3387-2cc3454bab5b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "apptflb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/frontendIPConfigurations/APPPublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/inboundNatRules/ssh-0",
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/inboundNatRules/ssh-1"
                ],
                "load_balancer_rules": [
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/loadBalancingRules/APPLBRule"
                ],
                "name": "APPPublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/publicIPAddresses/prasademo-appflbpip"
              }
            ],
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb",
            "location": "eastus",
            "name": "prasademoapplb",
            "resource_group_name": "prasademo-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.apptflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "dbtflb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/frontendIPConfigurations/dbPublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/inboundNatRules/ssh-0",
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/inboundNatRules/ssh-1"
                ],
                "load_balancer_rules": [
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/loadBalancingRules/dbLBRule"
                ],
                "name": "dbPublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/publicIPAddresses/prasademo-dbflbpip"
              }
            ],
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb",
            "location": "eastus",
            "name": "prasademodblb",
            "resource_group_name": "prasademo-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.dbtflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "tflb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/frontendIPConfigurations/PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/inboundNatRules/ssh-0",
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/inboundNatRules/ssh-1"
                ],
                "load_balancer_rules": [
                  "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/loadBalancingRules/LBRule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/publicIPAddresses/prasademo-flbpip"
              }
            ],
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb",
            "location": "eastus",
            "name": "prasademolb",
            "resource_group_name": "prasademo-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.tflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "apptflbbackendpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-appnic0/ipConfigurations/prasademo-appnic-conf0",
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-appnic1/ipConfigurations/prasademo-appnic-conf1"
            ],
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/backendAddressPools/APPBackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/loadBalancingRules/APPLBRule"
            ],
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb",
            "name": "APPBackEndAddressPool",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_lb.apptflb",
            "azurerm_public_ip.apptflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "dbtflbbackendpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/backendAddressPools/dbBackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/loadBalancingRules/dbLBRule"
            ],
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb",
            "name": "dbBackEndAddressPool",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_lb.dbtflb",
            "azurerm_public_ip.dbtflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "tflbbackendpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-webnic0/ipConfigurations/prasademo-webnic-config0",
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-webnic1/ipConfigurations/prasademo-webnic-config1"
            ],
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb",
            "name": "BackEndAddressPool",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_lb.tflb",
            "azurerm_public_ip.tflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "applbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/frontendIPConfigurations/APPPublicIPAddress",
            "frontend_ip_configuration_name": "APPPublicIPAddress",
            "frontend_port": 50001,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/inboundNatRules/ssh-0",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb",
            "name": "ssh-0",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.apptflbpip",
            "azurerm_resource_group.tfrg",
            "azurerm_lb.apptflb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/frontendIPConfigurations/APPPublicIPAddress",
            "frontend_ip_configuration_name": "APPPublicIPAddress",
            "frontend_port": 50002,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/inboundNatRules/ssh-1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb",
            "name": "ssh-1",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.apptflbpip",
            "azurerm_resource_group.tfrg",
            "azurerm_lb.apptflb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "dblbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/frontendIPConfigurations/dbPublicIPAddress",
            "frontend_ip_configuration_name": "dbPublicIPAddress",
            "frontend_port": 50001,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/inboundNatRules/ssh-0",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb",
            "name": "ssh-0",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.dbtflbpip",
            "azurerm_resource_group.tfrg",
            "azurerm_lb.dbtflb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/frontendIPConfigurations/dbPublicIPAddress",
            "frontend_ip_configuration_name": "dbPublicIPAddress",
            "frontend_port": 50002,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/inboundNatRules/ssh-1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb",
            "name": "ssh-1",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_lb.dbtflb",
            "azurerm_public_ip.dbtflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 50001,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/inboundNatRules/ssh-0",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb",
            "name": "ssh-0",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_lb.tflb",
            "azurerm_public_ip.tflbpip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 50002,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/inboundNatRules/ssh-1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb",
            "name": "ssh-1",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.tflbpip",
            "azurerm_resource_group.tfrg",
            "azurerm_lb.tflb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "applb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/probes/APPtcpProbe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/loadBalancingRules/APPLBRule"
            ],
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb",
            "name": "APPtcpProbe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_lb.apptflb",
            "azurerm_public_ip.apptflbpip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "dblb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/probes/dbtcpProbe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/loadBalancingRules/dbLBRule"
            ],
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb",
            "name": "dbtcpProbe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_lb.dbtflb",
            "azurerm_public_ip.dbtflbpip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/probes/tcpProbe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_lb.tflb",
            "azurerm_public_ip.tflbpip",
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "applb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/backendAddressPools/APPBackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/frontendIPConfigurations/APPPublicIPAddress",
            "frontend_ip_configuration_name": "APPPublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/loadBalancingRules/APPLBRule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb",
            "name": "APPLBRule",
            "probe_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademoapplb/probes/APPtcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.apptflbpip",
            "azurerm_resource_group.tfrg",
            "azurerm_lb.apptflb",
            "azurerm_lb_backend_address_pool.apptflbbackendpool",
            "azurerm_lb_probe.applb_probe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "dblb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/backendAddressPools/dbBackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/frontendIPConfigurations/dbPublicIPAddress",
            "frontend_ip_configuration_name": "dbPublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/loadBalancingRules/dbLBRule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb",
            "name": "dbLBRule",
            "probe_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademodblb/probes/dbtcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_lb.dbtflb",
            "azurerm_lb_backend_address_pool.dbtflbbackendpool",
            "azurerm_lb_probe.dblb_probe",
            "azurerm_public_ip.dbtflbpip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb",
            "name": "LBRule",
            "probe_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/loadBalancers/prasademolb/probes/tcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_lb_probe.lb_probe",
            "azurerm_public_ip.tflbpip",
            "azurerm_resource_group.tfrg",
            "azurerm_lb.tflb",
            "azurerm_lb_backend_address_pool.tflbbackendpool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfappnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-appnic0",
            "ip_configuration": [
              {
                "name": "prasademo-appnic-conf0",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/app-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-F5-D9",
            "name": "prasademo-appnic0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "prasademo-rg",
            "virtual_machine_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Compute/virtualMachines/prasademoappvm0"
          },
          "dependencies": [
            "azurerm_virtual_network.tfvnet",
            "azurerm_resource_group.tfrg",
            "azurerm_route_table.nattable",
            "azurerm_subnet.tfappvnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-appnic1",
            "ip_configuration": [
              {
                "name": "prasademo-appnic-conf1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/app-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8D-A8-51",
            "name": "prasademo-appnic1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "prasademo-rg",
            "virtual_machine_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Compute/virtualMachines/prasademoappvm1"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_route_table.nattable",
            "azurerm_subnet.tfappvnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfdbnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-dbnic0",
            "ip_configuration": [
              {
                "name": "prasademo-dbnic-conf0",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/db-subnet"
              }
            ],
            "location": "eastus",
            "name": "prasademo-dbnic0",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_subnet.tfdbvnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-dbnic1",
            "ip_configuration": [
              {
                "name": "prasademo-dbnic-conf1",
                "primary": true,
                "private_ip_address": "10.0.4.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/db-subnet"
              }
            ],
            "location": "eastus",
            "name": "prasademo-dbnic1",
            "private_ip_address": "10.0.4.5",
            "private_ip_addresses": [
              "10.0.4.5"
            ],
            "resource_group_name": "prasademo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_subnet.tfdbvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfwebnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-webnic0",
            "ip_configuration": [
              {
                "name": "prasademo-webnic-config0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/web-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-23-9D-0D",
            "name": "prasademo-webnic0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "prasademo-rg",
            "virtual_machine_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Compute/virtualMachines/prasademowebvm0"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_subnet.tfwebvnet",
            "azurerm_virtual_network.tfvnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkInterfaces/prasademo-webnic1",
            "ip_configuration": [
              {
                "name": "prasademo-webnic-config1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/web-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-23-9B-75",
            "name": "prasademo-webnic1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "prasademo-rg",
            "virtual_machine_id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Compute/virtualMachines/prasademowebvm1"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_subnet.tfwebvnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfappnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkSecurityGroups/prasademo-appnsg",
            "location": "eastus",
            "name": "prasademo-appnsg",
            "resource_group_name": "prasademo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VNET",
                "priority": 4000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP_VNET",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DENY_VNET",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfdbnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkSecurityGroups/prasademo-dbnsg",
            "location": "eastus",
            "name": "prasademo-dbnsg",
            "resource_group_name": "prasademo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VNET",
                "priority": 4000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP_VNET",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DENY_VNET",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfwebnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/networkSecurityGroups/prasademo-webnsg",
            "location": "eastus",
            "name": "prasademo-webnsg",
            "resource_group_name": "prasademo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "apptflbpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/publicIPAddresses/prasademo-appflbpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.121.67",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "prasademo-appflbpip",
            "resource_group_name": "prasademo-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dbtflbpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/publicIPAddresses/prasademo-dbflbpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.62.174.181",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "prasademo-dbflbpip",
            "resource_group_name": "prasademo-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tflbpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/publicIPAddresses/prasademo-flbpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.97.151",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "prasademo-flbpip",
            "resource_group_name": "prasademo-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/routeTables/prasademo-natroutetable/routes/natrule1",
            "name": "natrule1",
            "next_hop_in_ip_address": "10.0.0.10",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "prasademo-rg",
            "route_table_name": "prasademo-natroutetable",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_route_table.nattable"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "nattable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/routeTables/prasademo-natroutetable",
            "location": "eastus",
            "name": "prasademo-natroutetable",
            "resource_group_name": "prasademo-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "natrule1",
                "next_hop_in_ip_address": "10.0.0.10",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfappvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/app-subnet",
            "name": "app-subnet",
            "resource_group_name": "prasademo-rg",
            "virtual_network_name": "prasademo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_route_table.nattable",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfdbvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "prasademo-rg",
            "virtual_network_name": "prasademo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfwebvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "prasademo-rg",
            "virtual_network_name": "prasademo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.tfrg",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet",
            "location": "eastus",
            "name": "prasademo-vnet",
            "resource_group_name": "prasademo-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/web-subnet",
                "name": "web-subnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/app-subnet",
                "name": "app-subnet"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/95b4f162-1d36-4805-9214-18ade2c3a528/resourceGroups/prasademo-rg/providers/Microsoft.Network/virtualNetworks/prasademo-vnet/subnets/db-subnet",
                "name": "db-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.tfrg"
          ]
        }
      ]
    }
  ]
}